# treescope

./: .pylintrc  .readthedocs.yaml  AUTHORS  README.md  pyproject.toml  run_tests.py
.github/workflows/: unittests.yml
docs/: _autogen_root.rst  conf.py  index.rst
docs/_include/: _glue_figures.ipynb
docs/_static/: custom.css  custom.js
docs/api/: treescope.rst
docs/ext/: nb_output_cell_to_iframe.py  treescope_sphinx_customizations.py
docs/notebooks/: array_visualization.ipynb  building_custom_visualizations.ipynb  pretty_printing.ipynb
tests/: canonical_aliases_test.py  helpers.py  jax_support_test.py  ndarray_adapters_test.py  renderer_test.py  representation_test.py  utils_test.py
tests/fixtures/: treescope_examples_fixture.py
treescope/: __init__.py  array_autovisualizer.py  arrayviz.py  autovisualize.py  canonical_aliases.py  context.py  default_renderer.py  dtype_util.py  figures.py  formatting_util.py  handlers.py  layout_algorithms.py  lowering.py  ndarray_adapters.py  renderer.py  renderers.py  rendering_parts.py  repr_lib.py  treescope_ipython.py  type_registries.py
treescope/_internal/: arrayviz_impl.py  figures_impl.py  html_encapsulation.py  html_escaping.py  object_inspection.py
treescope/_internal/api/: array_autovisualizer.py  arrayviz.py  autovisualize.py  default_renderer.py  ipython_integration.py
treescope/_internal/handlers/: autovisualizer_hook.py  basic_types_handler.py  canonical_alias_postprocessor.py  custom_type_handlers.py  function_reflection_handlers.py  generic_pytree_handler.py  generic_repr_handler.py  repr_html_postprocessor.py  shared_value_postprocessor.py
treescope/_internal/js/: arrayviz.js
treescope/_internal/parts/: basic_parts.py  common_structures.py  common_styles.py  custom_dataclass_util.py  embedded_iframe.py  foldable_impl.py  part_interface.py
